# MLOps_project

./: .pre-commit-config.yaml  LICENSE  README.md  doc_gen.sh  pyproject.toml
data/: dataloader.ipynb
