[project]
name = "mlops-project"
version = "0.1.0"
description = "Final project of MLOps course, sneackers classification"
authors = [
    {name = "Inna Bobylina",email = "ivbobylina@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub (>=0.3.13,<0.4.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
